Update Classifier hidden_dim and add z_bn_final saving
Increased hidden dimension in Classifier and added code to save z_bn_final tensor.

--- a/metabric_classification.qmd
+++ b/metabric_classification.qmd
@@ -488,7 +488,7 @@ print("Conversion to tensor done")
 #Model Definition
 
 class Classifier(nn.Module):
-    def __init__(self, input_dim, output_dim, hidden_dim=256 ):
+    def __init__(self, input_dim, output_dim, hidden_dim=512 ):
         super().__init__()
         self.encoder = nn.Sequential(
             nn.Linear(input_dim, 2048),
@@ -586,6 +586,16 @@ disp.plot(cmap='Blues')
 
 ```
 
+# Save Z_BN
+
+```{python}
+model.eval()
+with torch.no_grad():
+    # right now its only saving the test zbn (data of 400 patients)
+    _, z_bn_final = model(X_test)          
+    torch.save(z_bn_final.detach().cpu(), 'z_bn_final.pt')
+    print(' Finales z_bn gespeichert → z_bn_final.pt')
+```
 
 # Model Save
 ```{python}
